addressed layout issue with subscribe form on iphone

--- a/src/main/webapp/static/app/base.css
+++ b/src/main/webapp/static/app/base.css
@@ -474,6 +474,7 @@ nav ul {
 
 input {
   min-height: 26px;
+  padding: 0;
 }
 
 button {
